Fix contact-info display on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -234,7 +234,7 @@ main {
 	}
 
 	.section-container {
-		width: 90%;
+		width: 92%;
 		max-width: 1300px;
 		margin: 0 auto;
 		padding: 50px 0;
@@ -470,7 +470,7 @@ main {
 		border-radius: 20px;
 
 		@include tablet {
-			margin: 20px 20px 50px;
+			margin: 20px 0px 50px;
 			padding: 10px 2%;
 		};
 
